# zap

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUtils.cmake  LICENSE  README.md  zapConfig.cmake.in  zap_command.cpp  zap_example.cpp
apps/: application.cpp  application.hpp  graphic_types.hpp
apps/particle_engine/: part_engine.cpp
apps/raster/: raster.cpp
apps/synesthesia/: application.cpp  application.hpp  colour.cpp  colour.hpp  fft.cpp  fft.hpp  graphic_types.hpp  main.cpp  module.hpp  shader_src.hpp  spectral_analyser.cpp  spectral_analyser.hpp  synesthesia.cpp
apps/tracer/: tracer.cpp
apps/zap_example/: application.cpp  application.hpp  generator.cpp  generator.hpp  module.cpp  module.hpp  plotter2.cpp  plotter2.hpp  quad.cpp  quad.hpp  shader_src.hpp  simple_shdr.cpp  simple_shdr.hpp  zap_example.cpp
cmake/Modules/: FindGLEW.cmake  FindOpenGL.cmake
core/: bitfield.hpp  core.hpp  enumfield.hpp  meta.hpp  pod.hpp
effects/: part_engine.hpp  particle_engine.cpp  particle_engine.hpp
engine/: buffer.cpp  buffer.hpp  buffer_format.cpp  buffer_format.hpp  engine.hpp  export.hpp  framebuffer.cpp  framebuffer.hpp  gl_api.cpp  gl_api.hpp  index_buffer.hpp  mesh.cpp  mesh.hpp  pixel_buffer.hpp  pixel_format.hpp  pixmap.hpp  program.cpp  program.hpp  render_state.cpp  render_state.hpp  sampler.cpp  sampler.hpp  shader.cpp  shader.hpp  state_stack.cpp  state_stack.hpp  texture.cpp  texture.hpp  types.hpp  uniform_block.hpp  uniform_buffer.hpp  vertex_attribute.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_format.hpp
examples/: frustum.cpp  graphic_types.hpp  noises.cpp  old_scene_graph.cpp  scene_graph.cpp  scene_graph2.cpp  template.cpp
examples/models/: models.cpp
generators/: generator.cpp  generator.hpp  pixel_conversion.cpp  pixel_conversion.hpp
geometry/: disc.hpp  ray.hpp
graphics2/: curve_input.cpp  curve_input.hpp  g2_types.cpp  g2_types.hpp  graphics2.hpp  graphics2_types.hpp  plotter2.cpp  plotter2.hpp  quad.cpp  quad.hpp
graphics3/: g3_types.cpp  g3_types.hpp  graphics3_types.hpp
loader/: image_loader.hpp  loader.cpp  loader.hpp
maths/: algebra.hpp  dummy.cpp  functions.hpp  io.cpp  io.hpp  mat2.hpp  mat3.hpp  mat4.hpp  maths.hpp  matrix.hpp  rand_lcg.hpp  rect.hpp  simd.hpp  transform.cpp  transform.hpp  vec.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector.hpp
maths/geometry/: ray.hpp  (+8 more)
rasteriser/: canvas.cpp  canvas.hpp  raster.hpp  rasteriser.cpp  rasteriser.hpp
raytracer/: hit_record.hpp  raytracer.cpp  raytracer.hpp
renderer/: camera.cpp  camera.hpp  light.hpp  material.hpp  render_args.hpp  render_context.cpp  render_context.hpp  render_state.hpp  renderer.cpp  renderer.hpp  shader_builder.cpp  shader_builder.hpp  style.hpp
scene_graph/: bound.hpp  node.hpp  spatial.hpp  visual.hpp
scenegraph/: spatial.hpp
src/core/: CMakeLists.txt  bitfield.hpp  enumfield.hpp  meta.hpp  pod.hpp
src/engine/: CMakeLists.txt  accessor.hpp  buffer.cpp  buffer.hpp  engine.hpp  framebuffer.cpp  framebuffer.hpp  gl_api.cpp  gl_api.hpp  index_buffer.hpp  mesh.cpp  mesh.hpp  pixel_buffer.hpp  pixel_conversion.cpp  pixel_conversion.hpp  pixel_format.hpp  pixmap.cpp  pixmap.hpp  program.cpp  program.hpp  render_state.hpp  render_target.hpp  renderbuffer.cpp  renderbuffer.hpp  sampler.hpp  shader.hpp  state_stack.cpp  state_stack.hpp  texture.cpp  texture.hpp  uniform_buffer.cpp  uniform_buffer.hpp  vertex_attribute.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_format.hpp
src/examples/: CMakeLists.txt  blur_glow.cpp  cube_map.cpp  curves.cpp  dynamic.cpp  frustum.cpp  models.cpp  old_scene_graph.cpp  raster.cpp  scene_graph.cpp  scene_graph2.cpp  template.cpp  text.cpp  tracer.cpp  zap_example.cpp
src/examples/models/: models.cpp
src/examples/particle_engine/: particle_engine.cpp
src/examples/plotter/: plotter.cpp
src/examples/raster/: raster.cpp
src/examples/zap_example/: zap_example.cpp
src/graphics/: CMakeLists.txt  colour.cpp  colour.hpp  graphics.hpp
src/graphics/generators/: generator.cpp  generator.hpp
src/graphics/generators/geometry/: geometry2.hpp  geometry3.hpp  geometry_traits.hpp
src/graphics/generators/noise/: perlin.hpp  value_noise.hpp
src/graphics/graphics2/: curve_input.cpp  curve_input.hpp  g2_types.cpp  g2_types.hpp  plotter2.cpp  plotter2.hpp  quad.cpp  quad.hpp
src/graphics/graphics2/plotter/: plotter.cpp  plotter.hpp
src/graphics/graphics2/text/: font_manager.cpp  font_manager.hpp  text.cpp  text.hpp  text_batch.cpp  text_batch.hpp  text_batcher.cpp  text_batcher.hpp
src/graphics/graphics3/: g3_types.cpp  g3_types.hpp  line_batch.cpp  line_batch.hpp
src/graphics/loader/: image_loader.hpp  image_writer.hpp  loader.hpp  obj_loader.cpp  obj_loader.hpp
src/graphics/particle_engine/: particle_engine.cpp  particle_engine.hpp
src/graphics/shadermap/: shadermap.cpp  shadermap.hpp
src/host/GLFW/: CMakeLists.txt  application.cpp  application.hpp
src/maths/: CMakeLists.txt  algebra.hpp  bound.hpp  functions.hpp  io.cpp  io.hpp  mat2.hpp  mat3.hpp  mat4.hpp  maths.hpp  matrix.hpp  quaternion.hpp  rand_functions.hpp  rand_lcg.hpp  simd.hpp  transform.cpp  transform.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector.hpp
src/maths/curves/: catmull_rom.hpp  curves.hpp  hermite.hpp
src/maths/geometry/: AABB.hpp  disc.hpp  hull.hpp  line.hpp  plane.hpp  ray.hpp  rect.hpp  segment.hpp  sphere.hpp
src/rasteriser/: CMakeLists.txt  canvas.cpp  canvas.hpp  rasteriser.cpp  rasteriser.hpp
src/raytracer/: CMakeLists.txt  raytracer.cpp  raytracer.hpp
src/renderer/: CMakeLists.txt  camera.cpp  camera.hpp  colour.cpp  colour.hpp  light.cpp  light.hpp  material.cpp  render_batch.hpp  render_context.cpp  render_context.hpp  renderer.cpp  renderer.hpp  renderer_fwd.hpp  rndr.hpp  shader_builder.cpp  shader_builder.hpp  style.cpp  style.hpp
src/renderer/engine/: buffer.hpp  engine.hpp  index_buffer.hpp  mesh.hpp  vertex_buffer.hpp
src/renderer/scene_graph/: bound.hpp  spatial.hpp  visual.hpp
src/tools/: CMakeLists.txt  log.hpp  string.hpp  threadpool.hpp
tools/: log.hpp  logger.hpp  os.cpp  os.hpp  threadpool.hpp
(+79 files in other folders)
